--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,14 +42,16 @@ dependencies:
   cached_network_image:
   fluttertoast: 
   location: ^3.2.1
-  google_maps_flutter: ^1.0.6 
-  firebase_core: ^0.5.3
-  firebase_auth: ^0.18.4+1
-  firebase_storage: ^5.2.0
-  cloud_firestore: ^0.14.4
-  firebase_messaging: ^7.0.3
+  google_maps_flutter: ^1.0.6
+  firebase_core: ^0.6.0
+  firebase_auth: ^0.19.0
+  firebase_storage: ^6.0.0
+  cloud_firestore: ^0.15.0
+  firebase_messaging: ^8.0.0-dev.12
   timeago: ^2.0.29
 
+  # File picker used in selecting images and videos
+  file_picker: ^2.1.5+1
 
 dev_dependencies:
   flutter_test:
